# nwidgets

./: .gitignore  AGENTS.md  BUG.md  CLAUDE.md  Cargo.toml  OPTIMIZATIONS.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_REPORT_FINAL.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  README.md  README_PERFORMANCE_ANALYSIS.md  START_HERE.md  ZED_ANALYSIS_README.md  ZED_CODE_EXAMPLES.md  ZED_PERFORMANCE_ANALYSIS.md  build.rs  flake.nix  hyprlandfocus.md  osd.md  result  test.sh  test_markdown.md
.ai/: CHANGELOG.md  INDEX.md  PLANNED.md  README.md  README_ZED_ANALYSIS.md  RESEARCH_COMPLETE.md  To_continue.md  WAYLAND_RESEARCH.md  ZED_ANALYSIS_INDEX.md  bug.json  bug.md  cef-gpu-platform-layer-plan.md  cef-wgpu-optimizations.md  features.json  last.md  optimization-implementation-plan.md  optimization-summary.md  performance-analysis-zed-vs-nwidgets.md  performance-estimation.md  robustness-patterns.md  zed-optimizations.md
.ai/docs/: dofusdb-api.md
.ai/docs/gpui/: README.md
.ai/other/: ANALYSIS_COMPLETE.md  PERFORMANCE_ANALYSIS_SUMMARY.md  ZED_IMPLEMENTATION_GUIDE.md  bug.md  micro-optimizations.md  optimization-summary.md  performance-guide.md  robustness-patterns.md  zed-advanced-patterns.md  zed-optimizations.md
.amazonq/cli-todo-lists/: 1763112038503.json
.kiro/agents/: Nwidgets.json
benches/: benchmarks.rs
crates/components/active_window/: Cargo.toml
crates/components/active_window/src/: lib.rs
crates/components/calendar/: Cargo.toml
crates/components/datetime/: Cargo.toml
crates/components/datetime/src/: lib.rs
crates/components/pomodoro/: Cargo.toml
crates/components/quicksettings/: Cargo.toml
crates/components/quicksettings/src/: lib.rs
crates/components/system_tray/: Cargo.toml
crates/components/systray/: Cargo.toml
crates/nwidgets-core/: Cargo.toml
crates/nwidgets-core/src/: main.rs
crates/nwidgets-core/src/views/: bar.rs  chat.rs  control_center.rs  launcher.rs  mod.rs  notification.rs  osd.rs  panel.rs
crates/services/applications/: Cargo.toml
crates/services/applications/src/: lib.rs
crates/services/audio/: Cargo.toml
crates/services/audio/src/: lib.rs
crates/services/bluetooth/: Cargo.toml
crates/services/clipboard/: Cargo.toml
crates/services/clipboard/src/: lib.rs
crates/services/lock/: Cargo.toml
crates/services/network/: Cargo.toml
crates/services/niri/: Cargo.toml
crates/services/niri/src/: lib.rs
crates/services/notification/: Cargo.toml
crates/services/notification/src/: lib.rs
crates/services/process/: Cargo.toml
crates/services/system_monitor/: Cargo.toml
crates/services/system_tray/: Cargo.toml
crates/services/systray/: Cargo.toml
crates/services/systray/src/: lib.rs
crates/shortcut/: Cargo.toml
crates/shortcut/src/: lib.rs
crates/widgets/bar/: Cargo.toml
crates/widgets/chat/: Cargo.toml
crates/widgets/control_center/: Cargo.toml
crates/widgets/launcher/: Cargo.toml
crates/widgets/notification/: Cargo.toml
crates/widgets/osd/: Cargo.toml
crates/widgets/panel/: Cargo.toml
docs/: ACTIVE_WINDOW.md  architecture.md
nix/: build.nix  cef.nix
nix/modules/: devshells.nix  overlays.nix  packages.nix
src/: app.rs  applications.rs  assets.rs  cli.rs  icons.rs  ipc.rs  launcher.rs  lib.rs  logger.rs  main.rs  nwidgets.rs  osd.rs  shell.rs  state.rs  theme.rs  types.rs  wayland_ext.rs
src/app/: init.rs  keys.rs  mod.rs  subscriptions.rs
src/components/: button.rs  circular_progress.rs  corner.rs  dropdown.rs  element_ext.rs  markdown_preview.rs  mod.rs  popover_menu.rs  search_input.rs  search_results.rs  slider.rs  text_input.rs  toggle.rs  webview.rs
src/modules/: area_picker.rs  background.rs  drawers.rs  lock.rs  mod.rs  notifications.rs  panel.rs
src/modules/active_window/: mod.rs
src/modules/area_picker/: mod.rs
src/modules/bluetooth/: mod.rs
src/modules/corner/: mod.rs
src/modules/datetime/: mod.rs
src/modules/dictation/: mod.rs
src/modules/lock/: mod.rs
src/modules/notifications/: mod.rs
src/modules/osd/: mod.rs
src/modules/pomodoro/: mod.rs
src/modules/systray/: mod.rs
src/modules/volume/: mod.rs
src/modules/workspace/: mod.rs
src/services/: ai_providers.rs  applications.rs  appmenu.rs  audio.rs  bluetooth.rs  calculator.rs  capslock.rs  cef.rs  chat.rs  clipboard.rs  control_center.rs  database.rs  dbus.rs  discord.rs  hotkey.rs  hyprland.rs  icon_cache.rs  launcher.rs  layershell.rs  lock_state.rs  mod.rs  mpris.rs  network.rs  notification_manager.rs  notifications.rs  numlock.rs  osd.rs  osd_events.rs  pin_controller.rs  pipewire.rs  pomodoro.rs  process.rs  runtime.rs  speech.rs  stt.rs  subscription.rs  system_monitor.rs  systray.rs  tasks.rs  transcription_events.rs
src/services/cef/: app.rs  browser.rs  client.rs  clipboard.rs  clipboard_inject.rs  find.rs  handlers.rs  init.rs  input.rs  message_handler.rs  mod.rs  render_handler.rs  service.rs
src/services/hardware/: bluetooth.rs  mod.rs  system_monitor.rs
src/services/launcher/: applications.rs  calculator.rs  core.rs  fuzzy.rs  mod.rs  process.rs  state.rs
src/services/media/: audio.rs  mod.rs  mpris.rs  pomodoro.rs
src/services/network/: ethernet.rs  ethernet_manager.rs  manager.rs  mod.rs  network.rs  network_state.rs  vpn.rs  vpn_manager.rs  wifi.rs  wifi_manager.rs
src/services/pipewire/: audio_state.rs  device_manager.rs  mod.rs  (+3 more)
src/theme/: colors.rs  icons.rs
src/ui/: mod.rs
src/utils/: cef_manager.rs  icon.rs  icons.rs  mod.rs  pin_controller.rs  result_ext.rs  runtime.rs  subscription.rs  webbridge.rs
src/widgets/: ai_chat.rs  chat.rs  control_center.rs  discord.rs  gemini_chat.rs  launcher.rs  markdown.rs  mod.rs  notifications.rs  osd.rs  slider.rs
src/windows/: chat.rs  launcher.rs  mod.rs
styles/: _chat.scss  _colors.scss  _control_center.scss  _jisig.scss  _launcher.scss  _notifications.scss  _osd.scss  _panel.scss  _power_menu.scss  _reset.scss  _tasker.scss  main.scss
styles/control_center/: audio_details.scss  bluetooth_details.scss  mod.scss  network_details.scss  notifications_details.scss
(+310 files in other folders)
