[workspace]
resolver = "2"
members = [
    "crates/nwidgets-core",
]
default-members = ["crates/nwidgets-core"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
gpui = { path = "/run/mount/ve_stock_2/ngpui/crates/ngpui_core/gpui", features = ["wayland"] }
gpui_tokio = { path = "/run/mount/ve_stock_2/ngpui/crates/ngpui_core/gpui_tokio" }
gpui_platform = { path = "/run/mount/ve_stock_2/ngpui/crates/ngpui_core/gpui_platform", features = ["wayland"] }
gpui_component = { path = "/run/mount/ve_stock_2/ngpui/crates/ngpui_ui/ui" }

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"

[profile.dev]
split-debuginfo = "unpacked"
incremental = false
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 16
