[workspace]
resolver = "2"
members = [
    "crates/nwidgets-core",
    "crates/widgets/bar",
    "crates/widgets/chat",
    "crates/widgets/osd",
    "crates/widgets/notification",
    "crates/widgets/panel",
    "crates/widgets/launcher",
    "crates/shortcut",
    "crates/services/niri",
    "crates/services/audio",
    "crates/services/system_monitor",
    "crates/services/bluetooth",
    "crates/services/network",
    "crates/services/applications",
    "crates/services/process",
    "crates/services/clipboard",
    "crates/services/lock",
    "crates/services/notification",
    "crates/services/system_tray",
    "crates/components/active_window",
    "crates/components/datetime",
    "crates/components/pomodoro",
    "crates/components/quicksettings",
    "crates/components/system_tray",
    "crates/components/calendar",
]
default-members = ["crates/nwidgets-core"]

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
gpui = { path = "../ngpui/crates/ngpui_core/gpui", features = ["wayland"] }
gpui_tokio = { path = "../ngpui/crates/ngpui_core/gpui_tokio" }
gpui_platform = { path = "../ngpui/crates/ngpui_core/gpui_platform", features = ["wayland"] }
gpui-component = { path = "../ngpui/crates/ngpui_ui/ui" }
nwidgets-service-niri = { path = "crates/services/niri" }
nwidgets-service-audio = { path = "crates/services/audio" }
nwidgets-service-system-monitor = { path = "crates/services/system_monitor" }
nwidgets-service-bluetooth = { path = "crates/services/bluetooth" }
nwidgets-service-network = { path = "crates/services/network" }
nwidgets-service-applications = { path = "crates/services/applications" }
nwidgets-service-process = { path = "crates/services/process" }
nwidgets-service-clipboard = { path = "crates/services/clipboard" }
nwidgets-service-lock = { path = "crates/services/lock" }
nwidgets-service-notification = { path = "crates/services/notification" }
nwidgets-service-system-tray = { path = "crates/services/system_tray" }
nwidgets-component-active-window = { path = "crates/components/active_window" }
nwidgets-component-datetime = { path = "crates/components/datetime" }
nwidgets-component-pomodoro = { path = "crates/components/pomodoro" }
nwidgets-component-quicksettings = { path = "crates/components/quicksettings" }
nwidgets-component-system-tray = { path = "crates/components/system_tray" }
anyhow = "1.0"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow" }

[workspace.lints.clippy]
dbg_macro = "deny"
style = { level = "allow", priority = -1 }
type_complexity = "allow"
let_underscore_future = "allow"
single_range_in_vec_init = "allow"
too_many_arguments = "allow"
large_enum_variant = "allow"
nonminimal_bool = "allow"

[profile.dev]
split-debuginfo = "unpacked"
incremental = false
codegen-units = 16

[profile.dev.build-override]
codegen-units = 16

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 16
