[package]
name = "nwidgets-core"
version = "0.1.0"
edition.workspace = true
publish = false
license = "GPL-3.0"

[dependencies]
gpui.workspace = true
gpui_tokio.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
nwidgets-bar = { path = "../widgets/bar" }
nwidgets-chat = { path = "../widgets/chat" }
nwidgets-osd = { path = "../widgets/osd" }
nwidgets-notification = { path = "../widgets/notification" }
nwidgets-control-center = { path = "../widgets/control_center" }
nwidgets-launcher = { path = "../widgets/launcher" }
nwidgets-shortcut = { path = "../shortcut" }

[lints]
workspace = true
