[package]
name = "nwidgets-core"
version = "0.1.0"
edition.workspace = true
publish = false
license = "GPL-3.0"

[dependencies]
gpui.workspace = true
gpui_tokio.workspace = true
gpui_platform.workspace = true
gpui-component.workspace = true
nwidgets-bar = { path = "../widgets/bar" }
nwidgets-chat = { path = "../widgets/chat" }
nwidgets-osd = { path = "../widgets/osd" }
nwidgets-notification = { path = "../widgets/notification" }
nwidgets-panel = { path = "../widgets/panel" }
nwidgets-launcher = { path = "../widgets/launcher" }
nwidgets-shortcut = { path = "../shortcut" }
nwidgets-service-niri.workspace = true
nwidgets-service-audio.workspace = true
nwidgets-service-system-monitor.workspace = true
nwidgets-service-bluetooth.workspace = true
nwidgets-service-network.workspace = true
nwidgets-service-applications.workspace = true
nwidgets-service-process.workspace = true
nwidgets-service-clipboard.workspace = true
nwidgets-service-lock.workspace = true
nwidgets-service-notification.workspace = true
nwidgets-service-system-tray.workspace = true
nwidgets-component-active-window = { path = "../components/active_window" }
nwidgets-component-datetime = { path = "../components/datetime" }
nwidgets-component-pomodoro = { path = "../components/pomodoro" }
nwidgets-component-quicksettings = { path = "../components/quicksettings" }
nwidgets-component-system-tray = { path = "../components/system_tray" }
nwidgets-component-calendar = { path = "../components/calendar" }

[lints]
workspace = true
