[package]
name = "nwidgets-component-datetime"
version = "0.1.0"
edition.workspace = true
publish = false
license = "GPL-3.0"

[dependencies]
gpui.workspace = true
gpui_tokio.workspace = true
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
anyhow.workspace = true

[lints]
workspace = true
