[package]
name = "nwidgets-component-quicksettings"
version = "0.1.0"
edition.workspace = true
publish = false
license = "GPL-3.0"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
nwidgets-service-bluetooth.workspace = true
nwidgets-service-network.workspace = true
nwidgets-service-audio.workspace = true
anyhow.workspace = true

[lints]
workspace = true
