[package]
name = "nwidgets-service-notification"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
gpui.workspace = true
gpui_tokio.workspace = true
zbus = "4.4"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
parking_lot = "0.12"
log = "0.4"

[lints]
workspace = true
